only expand forwards, fixes crash when the group size was bigger than the default group size and there was no following group available.

it works for me and seems reasonable, but sadly I cannot use the KateTranslationDebugger as it even fails without this change in various places...

Please give me feedback, who knows the whole translation code? it's sadly not good documented :(

BUG: 200450

CCMAIL: kwrite-devel@kde.org

svn path=/trunk/KDE/kdelibs/kate/; revision=1071923